<package>
  <name>collvoid_turtlebot</name>
  <version>1.0.0</version>
  <description>collvoid_turtlebot</description>
  <maintainer email="daniel.claes@maastrichtuniversity.nl">Daniel Claes</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/collvoid_turtlebot</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Daniel Claes</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>collvoid_local_planner</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>collvoid_local_planner</run_depend>
 

  <!-- Dependencies needed only for running tests. -->

  <export>

  </export>
</package>
